--- a/pom.xml
+++ b/pom.xml
@@ -129,6 +129,10 @@
             <artifactId>ognl</artifactId>
             <version>3.2.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-mongodb</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
