--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -53,3 +53,10 @@ spring.mail.default-encoding=UTF-8
 mail.fromMail.addr=wmx13682973595@163.com
 
 #thymeleaf.prefix=classpath:/templates/
+
+
+spring.data.mongo.host=127.0.0.1
+spring.data.mongo.port=27017
+spring.data.mongo.username=admin
+spring.data.mongo.password=admin
+spring.data.mongo.database=test
